--- a/buyun/index.html
+++ b/buyun/index.html
@@ -28,8 +28,12 @@
 			}
 
 			let info = document.querySelector("p");
+			let speed = 0, scroll = (document.body.scrollHeight + window.screen.height) / 2;
 			window.addEventListener("devicemotion", function(event) {
 				info.textContent = `x: ${event.accelerationIncludingGravity.x.toFixed(2)}, y: ${event.accelerationIncludingGravity.y.toFixed(2)}, z: ${event.accelerationIncludingGravity.z.toFixed(2)}`;
+				speedDiff = event.acceleration.y * event.interval * 1e-3;
+				scroll += (speed + speedDiff / 2) * event.interval * 1e-3 * window.screen.height / 0.12;
+				speed += speedDiff;
 			}, true);
 		}
 	</script>
