--- a/buyun/index.html
+++ b/buyun/index.html
@@ -31,12 +31,15 @@
 			}
 
 			let info = document.querySelector("p");
-			let speed = 0, scroll = (document.body.scrollHeight + window.screen.height) / 2;
+			let speed = 0, scroll = (document.body.scrollHeight - window.screen.height) / 2;
+			const pixlePerMetre = window.screen.height / 0.12;
 			window.addEventListener("devicemotion", function(event) {
-				speedDiff = event.acceleration.y * event.interval * 1e-3;
-				scroll += (speed + speedDiff / 2) * event.interval * 1e-3 * window.screen.height / 0.12;
+				let acc = event.acceleration.y * pixlePerMetre;
+				let interval = event.interval * 1e-3;
+				speedDiff = acc * interval;
+				scroll += (speed + speedDiff / 2) * interval;
 				speed += speedDiff;
-				info.textContent = `speedDiff: ${speedDiff}, ppm: ${window.screen.height / 0.12}, speed: ${speed}, scroll: ${scroll}`;
+				info.innerHTML = `ppm: ${window.screen.height / 0.12}<br> speedDiff: ${speedDiff}<br> speed: ${speed}<br> scroll: ${scroll}`;
 			}, true);
 		}
 	</script>
