--- a/buyun/index.html
+++ b/buyun/index.html
@@ -36,10 +36,13 @@
 			window.addEventListener("devicemotion", function(event) {
 				let acc = event.acceleration.y * pixlePerMetre;
 				let interval = event.interval * 1e-3;
+
 				speedDiff = acc * interval;
 				scroll += (speed + speedDiff / 2) * interval;
 				speed += speedDiff;
+
 				info.innerHTML = `ppm: ${window.screen.height / 0.12}<br> speedDiff: ${speedDiff}<br> speed: ${speed}<br> scroll: ${scroll}`;
+				window.scroll(0, scroll);
 			}, true);
 		}
 	</script>
