--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Coming</title>
+	<title>Coming Soon</title>
 </head>
 <body>
-	<h1>Under struction</h1>
+	<h1>Under Construction</h1>
 </body>
 </html>
